--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "6.14.2",
+    "sort-by": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
